--- a/src/starbash/templates/repo/master.toml
+++ b/src/starbash/templates/repo/master.toml
@@ -1,13 +1,13 @@
-# This is a master repository for (Starbash)[{PROJECT_URL}].
+# This is a master repository for (Starbash)[$PROJECT_URL].
 #
 # This file marks the root directory of a set of auto matinained astrophotography
 # 'master' files, such as master darks, flats or biases.
 #
 # You generally don't need to edit this file directly - it was auto generated when you ran
-# "sb repo add --master {REPO_PATH}".
+# "sb repo add --$REPO_TYPE $REPO_PATH".
 #
 
 [repo]
 kind = "master"
 
-relative = "{DEFAULT_RELATIVE}"
+relative = "{instrument}/{date}/{imagetyp}/master_{session_config}.fit"
