--- a/src/starbash/templates/repo/processed.toml
+++ b/src/starbash/templates/repo/processed.toml
@@ -1,9 +1,9 @@
-# This is a processed repository for (Starbash)[{PROJECT_URL}].
+# This is a processed repository for (Starbash)[$PROJECT_URL].
 #
 # This file marks the root directory of a set of generated/processed starbash output files.
 #
 # You generally don't need to edit this file directly - it was auto generated when you ran
-# "sb repo add --processed {REPO_PATH}".
+# "sb repo add --$REPO_TYPE $REPO_PATH".
 #
 
 [repo]
