--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ pytest-xdist = "^3.8.0"
 pre-commit = "^4.3.0"
 harlequin = "^2.4.1"
 ruff = "^0.14.4"
+pyright = "^1.1.407"
 
 [tool.poetry.scripts]
 starbash = "starbash.main:app"
@@ -92,6 +93,17 @@ ignore = [
     "F841",    # Local variable assigned but never used
     "PLC0415", # Import should be at top of file
 ]
+
+[tool.pyright]
+# Enable import validation to catch runtime import errors at analysis time
+include = ["src"]
+exclude = ["**/__pycache__", ".venv", "build", "dist"]
+typeCheckingMode = "basic"                             # Catches import errors without being overly strict
+reportMissingImports = true
+reportImportCycles = true
+reportUndefinedVariable = true
+pythonVersion = "3.12"
+pythonPlatform = "Linux"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
