add better python type checker

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -73,7 +73,8 @@
 				"charliermarsh.ruff",
 				"tamasfe.even-better-toml",
 				"github.copilot",
-				"skellock.just"
+				"skellock.just",
+				"detachhead.basedpyright",
 				// "google.geminicodeassist"
 			],
 			"settings": {
