--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,18 +16,7 @@ repos:
         stages: [pre-push]
         files: ^(src|tests)/.*\.py$
 
-  # Python import validation - catches import errors that Ruff misses
-  - repo: local
-    hooks:
-      - id: python-import-check
-        name: Check Python imports
-        entry: poetry run python .pre-commit-scripts/check-imports.py
-        language: system
-        pass_filenames: false
-        files: ^src/.*\.py$
-        stages: [pre-push]
-
-  # Run "just test" before pushing
+  # Run "just check test" before pushing - includes basedpyright type checking
   - repo: local
     hooks:
       - id: run-tests
