--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,7 +28,7 @@ pytest-xdist = "^3.8.0"
 pre-commit = "^4.3.0"
 harlequin = "^2.4.1"
 ruff = "^0.14.4"
-pyright = "^1.1.407"
+basedpyright = "^1.33.0"
 
 [tool.poetry.scripts]
 starbash = "starbash.main:app"
@@ -94,7 +94,7 @@ ignore = [
     "PLC0415", # Import should be at top of file
 ]
 
-[tool.pyright]
+[tool.basedpyright]
 # Enable import validation to catch runtime import errors at analysis time
 include = ["src"]
 exclude = ["**/__pycache__", ".venv", "build", "dist"]
