--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -110,6 +110,21 @@
             ]
         },
         {
+            "name": "Python Debugger: starbash repo list",
+            "type": "debugpy",
+            "request": "launch",
+            "module": "starbash.main",
+            "console": "integratedTerminal",
+            "python": "${workspaceFolder}/.vscode/get_poetry_python.sh",
+            "justMyCode": false,
+            "args": [
+                "--debug",
+                "--verbose",
+                "repo",
+                "list",
+            ]
+        },
+        {
             "name": "Python Debugger: starbash repo reindex",
             "type": "debugpy",
             "request": "launch",
