--- a/src/starbash/templates/repo/master.toml
+++ b/src/starbash/templates/repo/master.toml
@@ -10,4 +10,8 @@
 [repo]
 kind = "master"
 
-relative = "{instrument}/{date}/{imagetyp}/master_{session_config}.fit"
+# Given a particular 'kind' of master, we can use different relative paths
+relative.flat = "{instrument}/{date}/{imagetyp}/master_{session_config}.fit"
+
+# For any other kind we use the default path (i.e. bias, dark, etc)
+relative.default = "{camera_id}/{date}/{imagetyp}/master_{session_config}.fit"
