fix master output paths

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -89,6 +89,7 @@
             "justMyCode": false,
             "args": [
                 "--debug",
+                "--force",
                 "process",
                 "masters"
             ]
