--- a/src/starbash/templates/userconfig.toml
+++ b/src/starbash/templates/userconfig.toml
@@ -1,4 +1,4 @@
-# This is your (Starbash)[{PROJECT_URL}] user configuration file.  It can be used to provide default settings
+# This is your (Starbash)[$PROJECT_URL] user configuration file.  It can be used to provide default settings
 # to workflows.
 
 # (or wherever is appropriate for the user's platform).
