--- a/src/starbash/recipes/seestar/starbash.toml
+++ b/src/starbash/recipes/seestar/starbash.toml
@@ -58,7 +58,7 @@ script = '''
 # this stage is only be considered if the previous stage in this same array
 # was run.  It must be run inside the same tempdir (so that files from previous stage are available)
 
-description = "Stack OSC simple (non duo filter) images"
+description = "Stack Seestar images"
 
 input.source = "recipe" # we will use output files from previous stages in this same recipe as our input
 
