--- a/test-data/Dockerfile
+++ b/test-data/Dockerfile
@@ -5,5 +5,8 @@ FROM scratch
 LABEL org.opencontainers.image.source https://github.com/geeksville/starbash
 LABEL org.opencontainers.image.description "Test-data for starbash development.  See https://github.com/geeksville/starbash/test-data for more information."
 
-# Copy your big, dumb files into the "box"
-COPY inflated/README.md /README.md
+# Copy all files from inflated/ into /test-data
+COPY inflated/ /test-data/
+
+# Declare this directory as a volume so --volumes-from can mount it
+VOLUME /test-data
