wip mostly done #1 (dwarf3 support)
still need to fix the following 3 files should not have been merged as a session

'/workspaces/starbash/test-data/inflated/dwarf3/CALI_FRAME/dark/cam_1/dark_exp_30.000000_gain_60_bin_1_29C_stack_1.fits'
'/workspaces/starbash/test-data/inflated/dwarf3/CALI_FRAME/dark/cam_1/dark_exp_15.000000_gain_60_bin_1_29C_stack_3.fits'
'/workspaces/starbash/test-data/inflated/dwarf3/CALI_FRAME/dark/cam_1/dark_exp_60.000000_gain_60_bin_1_29C_stack_1.fits'

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -89,7 +89,6 @@
             "justMyCode": false,
             "args": [
                 "--debug",
-                "--force",
                 "process",
                 "masters"
             ]
@@ -106,8 +105,7 @@
                 "--debug",
                 "repo",
                 "add",
-                "--processed",
-                "./images/processed"
+                "./test-data/inflated/dwarf3"
             ]
         },
         {
@@ -135,9 +133,9 @@
             "justMyCode": false,
             "args": [
                 "--force",
+                "--debug",
                 "repo",
-                "reindex",
-                "file:///workspaces/starbash/images/from_astroboy"
+                "reindex"
             ]
         },
         {
