shrink test repo to 4GB

--- a/test-data/Dockerfile
+++ b/test-data/Dockerfile
@@ -1,6 +1,6 @@
-# Start from a 'scratch' image. It's literally empty.
-FROM scratch
-# FROM alpine:latest
+# we base from alpine instead of scratch because Github CI needs to be able to
+# run 'some sort of entrypoint' to be able to use the image
+FROM alpine:3.18
 
 # backpointer for info on ghcr.io
 LABEL org.opencontainers.image.source=https://github.com/geeksville/starbash
@@ -11,3 +11,6 @@ COPY inflated/ /test-data/
 
 # Declare this directory as a volume so --volumes-from can mount it
 VOLUME /test-data
+
+# placeholder command to keep github happy
+CMD ["true"]
