--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -6,6 +6,7 @@
         "github.copilot",
         "skellock.just",
         "charliermarsh.ruff",
+        "bierner.markdown-mermaid"
         // "google.geminicodeassist"
     ]
 }
