--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
     hooks:
       - id: run-tests
         name: Run check and tests
-        entry: just check test
+        entry: just lint test
         language: system
         stages: [pre-push]
         pass_filenames: false
