progress on input files

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -76,7 +76,7 @@
             "args": [
                 "--debug",
                 "process",
-                "auto"
+                "new"
             ]
         },
         {
