fixes 49946ea9 (keyboardinterrupt should not be considered an error)

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,8 +15,7 @@
             "args": [
                 "--debug",
                 "user",
-                "email",
-                "kevinh@geeksville.com"
+                "setup"
             ]
         },
         {
