--- a/doc/toml/example/processed-repo/ngc281/starbash.toml
+++ b/doc/toml/example/processed-repo/ngc281/starbash.toml
@@ -16,6 +16,21 @@ target.id = "NGC281"
 # OBJCTRA = '00 23 44'           / [H M S] RA of imaged object
 # OBJCTDEC= '+89 55 28'
 
+[stages]
+# Information about recipes used for processing or excluded by the user
+# If you'd like to pick something different just comment out the line in USED and uncomment the line in
+# excluded.
+# Whenever stabash is rerun it will update these arrays based on what was actually used for this run.
+used = [
+    "osc2/dual_duo.toml",
+    "master_bias",
+    "master_flat",
+    "master_dark",
+]
+excluded = [
+    "osc2/single_duo.toml",
+]
+
 [[sessions]]
 # Session #1
 start = 1979-05-27T07:32:00    # first date of observation
