--- a/src/starbash/templates/repo/processed.toml
+++ b/src/starbash/templates/repo/processed.toml
@@ -13,3 +13,13 @@ kind = "processed"
 # if this expression includes a * at the end we assume multiple files might be generated and they are all
 # placed in the indicated directory.
 relative.default = "{target}/*"
+
+[stages]
+# Information about recipes used for processing or excluded by the user
+# If you'd like to pick something different just comment out the line in USED and uncomment the line in
+# excluded.
+# Whenever stabash is rerun it will update these arrays based on what was actually used for this run.
+used = [
+]
+excluded = [
+]
