--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -89,7 +89,8 @@
             "args": [
                 "--debug",
                 "process",
-                "masters"
+                "masters",
+                "--new"
             ]
         },
         {
