Fixed m13 and ic434 processing

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -75,7 +75,8 @@
             "args": [
                 "--debug",
                 "process",
-                "auto"
+                "auto",
+                "--no-masters",
             ]
         },
         {
