--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -90,7 +90,7 @@
             "justMyCode": false,
             "args": [
                 "--debug",
-                "--force",
+                // "--force",
                 "process",
                 "masters"
             ]
