--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,15 +25,21 @@ sentry-sdk = "^2.42.1"
 update-checker = "^0.18.0"
 requests-cache = "^1.2.1"
 doit = "^0.36.0"
+graxpert = {path = "GraXpert", extras = ["cpuonly"], develop = true}
+
+# Note: to use graxpert from the local tree rather than pypi use:
+# graxpert = {path = "GraXpert", extras = ["cpuonly"], develop = true}
 
 [tool.poetry.group.dev.dependencies]
 pytest = ">=8.4.2,<9.0.0"
 pytest-cov = "^6.0.0"
 pytest-xdist = "^3.8.0"
 pre-commit = "^4.3.0"
-harlequin = "^2.4.1"
 ruff = "^0.14.4"
 basedpyright = "^1.33.0"
+
+# We don't currently use this text based sql client
+# harlequin = "^2.4.1"
 
 [tool.poetry.scripts]
 starbash = "starbash.main:app"
@@ -117,6 +123,7 @@ ignore = [
 # Enable import validation to catch runtime import errors at analysis time
 include = ["src"]
 exclude = ["**/__pycache__", ".venv", "build", "dist"]
+extraPaths = ["GraXpert"]  # Include local GraXpert package for type checking
 typeCheckingMode = "basic"                             # Catches import errors without being overly strict
 reportMissingImports = true
 reportImportCycles = true
