--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,8 @@ markers = [
 # --tb=line shows minimal tracebacks (just one line per failure)
 # --tb=short shows shorter tracebacks
 # -rA shows summary of all test outcomes at end
-addopts = "-m 'not slow and not integration' -n auto --tb=short -rA"
+# --ignore excludes third-party test directories
+addopts = "-m 'not slow and not integration' -n auto --tb=short -rA --ignore=GraXpert"
 
 # Note: To limit captured output further, you can:
 # 1. Use --tb=line for minimal tracebacks
